--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -68,6 +68,24 @@
 			}
 		},
 		{
+			"label": "Build Publish Event",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"/property:GenerateFullPaths=true",
+				"/consoleloggerparameters:NoSummary"
+			],
+			"type": "process",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"problemMatcher": "$msCompile",
+			"options": {
+				"cwd": "${workspaceFolder}/PublishEvent"
+			}
+		},
+		{
 			"type": "func",
 			"dependsOn": "build (functions)",
 			"options": {
