--- a/.github/workflows/buildAndDeploy.yaml
+++ b/.github/workflows/buildAndDeploy.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_NAME: 'eventgridtrialprocessor'
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'src'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'OrderReceivedFunction'
   DOTNET_VERSION: '8.0.x'
 
 jobs:
