--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -86,6 +86,24 @@
 			}
 		},
 		{
+			"label": "Build ServiceBusConsumer",
+			"command": "dotnet",
+			"args": [
+				"build",
+				"/property:GenerateFullPaths=true",
+				"/consoleloggerparameters:NoSummary"
+			],
+			"type": "process",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"problemMatcher": "$msCompile",
+			"options": {
+				"cwd": "${workspaceFolder}/ServiceBusConsumer"
+			}
+		},
+		{
 			"type": "func",
 			"dependsOn": "build (functions)",
 			"options": {
