--- a/OrderReceivedFunction/OrderReceivedFunction.csproj
+++ b/OrderReceivedFunction/OrderReceivedFunction.csproj
@@ -33,4 +33,8 @@
     <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
