--- a/ServiceBusConsumer/ServiceBusConsumer.csproj
+++ b/ServiceBusConsumer/ServiceBusConsumer.csproj
@@ -5,13 +5,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <UserSecretsId>c0b3d8f5-348d-4382-a680-c22c5fbc78e6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Messaging.EventGrid" Version="4.29.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.2" />
+    <PackageReference Include="NServiceBus.Transport.AzureServiceBus" Version="4.2.4" />
   </ItemGroup>
 
   <ItemGroup>
